# FidelityFX-FSR2

src/DX11/: CMakeLists.txt  FSR2DX11Sample.cpp  FSR2DX11Sample.h  Fsr2Wrapper.cpp  Fsr2Wrapper.h
src/DX11/Shaders/: FSR2DX11Sample.hlsl
src/DX11/framework/amd_lib/: CMakeLists.txt
src/DX11/framework/amd_sdk/: CMakeLists.txt
src/ffx-fsr2-api/: CMakeLists.txt
src/ffx-fsr2-api/dx11/: CMakeLists.txt  ffx_fsr2_dx11.cpp  ffx_fsr2_dx11.h
src/ffx-fsr2-api/dx11/shaders/: ffx_fsr2_shaders_dx11.cpp  ffx_fsr2_shaders_dx11.h
src/ffx-fsr2-api/shaders/: ffx_fsr2_resources.h
